feat : gitignore 적용

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,10 @@ repositories {
     mavenCentral()
     jcenter()
 }
-
+compileJava.options.encoding = 'UTF-8'
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
 
 dependencies {
     implementation 'org.jetbrains:annotations:20.1.0'
