--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,8 @@ dependencies {
     compile('org.springframework.session:spring-session-jdbc')
     compile("org.mariadb.jdbc:mariadb-java-client:2.4.1")
     annotationProcessor('org.projectlombok:lombok')
-
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     testAnnotationProcessor('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
