fix : allow origins all

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 #spring.jpa.show-sql=true
 #spring.session.jdbc.initialize-schema=always
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mariadb://stockdb.cmkw2o0ejmme.ap-northeast-2.rds.amazonaws.com:3306/stockdb
 spring.datasource.username=Hayoung
 spring.datasource.password=gkduddy456321!
