--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@
 #spring.session.jdbc.initialize-schema=always
 
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mariadb://stockdb.cmkw2o0ejmme.ap-northeast-2.rds.amazonaws.com:3306/stockdb
+spring.datasource.url=jdbc:mariadb://stockdb.cmkw2o0ejmme.ap-northeast-2.rds.amazonaws.com:3306/stockdb?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=Hayoung
 spring.datasource.password=gkduddy456321!
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
