--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@
 #spring.datasource.username=root
 #spring.datasource.password=0000
 #
-#spring.session.store-type=jdbc
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.session.store-type=jdbc
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.use-new-id-generator-mappings=false
 #spring.jpa.generate-ddl = true
 #spring.jpa.hibernate.ddl-auto=update
 #
-#spring.jpa.show-sql=true
-#spring.session.jdbc.initialize-schema=always
+spring.jpa.show-sql=true
+spring.session.jdbc.initialize-schema=always
 
 spring.jpa.hibernate.ddl-auto=none
 springspring.datasource.url=jdbc:mariadb://stockdb.cmkw2o0ejmme.ap-northeast-2.rds.amazonaws.com:3306/stockdb?useUnicode=true&characterEncoding=utf-8
