feat : add WebSocket dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     annotationProcessor('org.projectlombok:lombok')
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
     testAnnotationProcessor('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
