--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 #spring.jpa.generate-ddl = true
 #spring.jpa.hibernate.ddl-auto=update
-#
 spring.jpa.show-sql=true
-spring.session.jdbc.initialize-schema=always
+#spring.session.jdbc.initialize-schema=always
 
 spring.jpa.hibernate.ddl-auto=none
-springspring.datasource.url=jdbc:mariadb://stockdb.cmkw2o0ejmme.ap-northeast-2.rds.amazonaws.com:3306/stockdb?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mariadb://stockdb.cmkw2o0ejmme.ap-northeast-2.rds.amazonaws.com:3306/stockdb?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=Hayoung
 spring.datasource.password=gkduddy456321!
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
