--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /.gradle/
 /gradle/wrapper/gradle-wrapper.properties
 /gradle/wrapper/gradle-wrapper.jar
+
+/src/main/resources/application.properties
