--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@
 /gradle/wrapper/gradle-wrapper.properties
 /gradle/wrapper/gradle-wrapper.jar
 
-/src/main/resources/application.properties
+/src/main/resources/application.properties/
