--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,18 @@
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/test1?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=0000
-
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://localhost:3306/test1?useUnicode=true&characterEncoding=utf-8
+#spring.datasource.username=root
+#spring.datasource.password=0000
+#
 spring.session.store-type=jdbc
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.generate-ddl = true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.session.jdbc.initialize-schema=always
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
+#spring.jpa.generate-ddl = true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.session.jdbc.initialize-schema=always
 
-#spring.jpa.hibernate.ddl-auto=none
-#spring.datasource.url=jdbc:mariadb://stockdb.cmkw2o0ejmme.ap-northeast-2.rds.amazonaws.com:3306/stockdb?useUnicode=true&characterEncoding=utf-8
-#spring.datasource.username=Hayoung
-#spring.datasource.password=gkduddy456321!
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mariadb://stockdb.cmkw2o0ejmme.ap-northeast-2.rds.amazonaws.com:3306/stockdb?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=Hayoung
+spring.datasource.password=gkduddy456321!
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
