--- a/src/main/resources/application-real.properties
+++ b/src/main/resources/application-real.properties
@@ -1,1 +1,3 @@
-spring.profiles.include=oauth,real-db
+spring.profiles.include=real-db
+spring.session.store-type=jdbc
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
